cmake_minimum_required(VERSION 3.9)
project(ft_ssl)

set(CMAKE_CXX_STANDARD 11)

add_executable(ft_ssl
        libftprintf/libft/ft_atoi.c
        libftprintf/libft/ft_bzero.c
        libftprintf/libft/ft_char_replace.c
        libftprintf/libft/ft_del_doubleint.c
        libftprintf/libft/ft_del_doublestr.c
        libftprintf/libft/ft_int_reverse.c
        libftprintf/libft/ft_intcpy.c
        libftprintf/libft/ft_intdel.c
        libftprintf/libft/ft_intrealloc.c
        libftprintf/libft/ft_isalnum.c
        libftprintf/libft/ft_isalpha.c
        libftprintf/libft/ft_isascii.c
        libftprintf/libft/ft_isdigit.c
        libftprintf/libft/ft_isprint.c
        libftprintf/libft/ft_itoa.c
        libftprintf/libft/ft_lstadd.c
        libftprintf/libft/ft_lstadd_end.c
        libftprintf/libft/ft_lstdel.c
        libftprintf/libft/ft_lstdelone.c
        libftprintf/libft/ft_lstiter.c
        libftprintf/libft/ft_lstlen.c
        libftprintf/libft/ft_lstmap.c
        libftprintf/libft/ft_lstnew.c
        libftprintf/libft/ft_lstput.c
        libftprintf/libft/ft_lstswap.c
        libftprintf/libft/ft_memalloc.c
        libftprintf/libft/ft_memccpy.c
        libftprintf/libft/ft_memchr.c
        libftprintf/libft/ft_memcmp.c
        libftprintf/libft/ft_memcpy.c
        libftprintf/libft/ft_memdel.c
        libftprintf/libft/ft_memmove.c
        libftprintf/libft/ft_memset.c
        libftprintf/libft/ft_putchar.c
        libftprintf/libft/ft_putchar_fd.c
        libftprintf/libft/ft_putendl.c
        libftprintf/libft/ft_putendl_fd.c
        libftprintf/libft/ft_putnbr.c
        libftprintf/libft/ft_putnbr_fd.c
        libftprintf/libft/ft_putstr.c
        libftprintf/libft/ft_putstr_fd.c
        libftprintf/libft/ft_reallcat.c
        libftprintf/libft/ft_realloc.c
        libftprintf/libft/ft_return_smaller.c
        libftprintf/libft/ft_sqrt.c
        libftprintf/libft/ft_strcat.c
        libftprintf/libft/ft_strchr.c
        libftprintf/libft/ft_strclr.c
        libftprintf/libft/ft_strcmp.c
        libftprintf/libft/ft_strcpy.c
        libftprintf/libft/ft_strdel.c
        libftprintf/libft/ft_strdup.c
        libftprintf/libft/ft_strequ.c
        libftprintf/libft/ft_striter.c
        libftprintf/libft/ft_striteri.c
        libftprintf/libft/ft_strjoin.c
        libftprintf/libft/ft_strlcat.c
        libftprintf/libft/ft_strlen.c
        libftprintf/libft/ft_strmap.c
        libftprintf/libft/ft_strmapi.c
        libftprintf/libft/ft_strncat.c
        libftprintf/libft/ft_strncmp.c
        libftprintf/libft/ft_strncpy.c
        libftprintf/libft/ft_strnequ.c
        libftprintf/libft/ft_strnew.c
        libftprintf/libft/ft_strnstr.c
        libftprintf/libft/ft_strrchr.c
        libftprintf/libft/ft_strsplit.c
        libftprintf/libft/ft_strstr.c
        libftprintf/libft/ft_strsub.c
        libftprintf/libft/ft_strtrim.c
        libftprintf/libft/ft_swap.c
        libftprintf/libft/ft_tolower.c
        libftprintf/libft/ft_toupper.c
        libftprintf/libft/get_next_line.c
        libftprintf/libft/libft.h
        libftprintf/printf/ft_charmod.c
        libftprintf/printf/ft_colour.c
        libftprintf/printf/ft_create_struct.c
        libftprintf/printf/ft_float.c
        libftprintf/printf/ft_float_size.c
        libftprintf/printf/ft_intmod.c
        libftprintf/printf/ft_itoa_base.c
        libftprintf/printf/ft_modify.c
        libftprintf/printf/ft_print_unicode.c
        libftprintf/printf/ft_printf.c
        libftprintf/printf/ft_printf.h
        libftprintf/printf/ft_read_args.c
        libftprintf/printf/ft_read_flags.c
        libftprintf/printf/ft_unicode.c
        ft_algo_md5.c
        ft_algo_sha256.c
        ft_algo_sha512.c
        ft_base64.c
        ft_bits_oper.c
        ft_copy_hash.c
        ft_create_blocks_md5.c
        ft_create_blocks_sha256.c
        ft_create_blocks_sha512.c
        ft_del_md.c
        ft_else_data.c
        ft_error_ssl.c
        ft_find_algo.c
        ft_initialize_buff.c
        ft_lst_create.c
        ft_print_hash.c
        ft_print_upper.c
        ft_read_flags.c
        ft_read_input.c
        ft_return_elem.c
        ft_rotr.c
        ft_ssl.h
        ft_ssl_split.c
        main.c)
